use uid instead of name
